# numchk

./: .travis.yml  Makefile.am  README.md  configure.ac  index.md
_layouts/: project.html
build-aux/: cccc.c  yuck.c
snap/: snapcraft.yaml
src/: Makefile.am  aadhaar.c  abartn.c  bic.c  bicc.c  cas.c  cas.h  cpf.c  credcard.c  credcard.h  credref.c  cusip.c  cusip.h  damm.c  euvatid.c  figi.c  figi.h  grid.c  gtin.c  gtin.h  iban-cc.ccl  iban.c  iban.h  idnr.c  imei.c  imo.c  iposan.c  isan.c  isbn.c  isbn.h  isin.c  isin.h  ismn.c  isni.c  issn.c  istc.c  istc.h  kennitala.c  lei.c  lei.h  (+21 more)
test/: Makefile.am  bsym.xmpl  clitoris.c  credcard_01.clit  credcard_02.clit  credcard_03.clit  credcard_04.clit  figi_01.clit  figi_02.clit  glei.xmpl  iban_01.clit  iban_02.clit  iban_03.clit  isin.xmpl  isin_01.clit  isin_02.clit  isin_03.clit  lei_01.clit  lei_02.clit  nordea.xmpl  numchk_01.clit  numchk_01.txt  paypalobjects.xmpl
